--- a/menu.html
+++ b/menu.html
@@ -12,8 +12,8 @@
 		content="Cafeu, food, restaurant, html, template, bootstrap, business, clean, creative, designer, responsive, minimal">
 	<meta name="type" content="Restaurant Template">
 	<meta name="title" content="Cafeu - Food Restaurant Bootstrap HTML Template">
-	<meta name="description" content="Codebasket food Bootstrap Website Template">
-	<title>Cafeu Html Template Menu</title>
+	<meta name="description" content="Discover the irresistible taste of Chick Peck fried chicken! Made with 100% Swiss quality, organic ingredients, and a commitment to excellence. Enjoy our delicious meals with fast online delivery and a buffet service that satisfies every craving. Taste the difference today!" />
+  <title>Chick Peck | Best Fried Chicken with 100% Swiss Quality & Organic Ingredients</title>
 	<!-- ==============favicon=============== -->
 	<link rel="icon" type="image/png" href="assets/img/log.png" />
 
@@ -451,26 +451,25 @@
 							<div class="col-lg-3 col-md-6 col-sm-6 my-2 smpadright40" data-aos="fade-up" data-aos-duration="1000">
 								<div class="footer-content-wrapper">
 									<div class="footer-logo mb-4">
-										<img src="assets/img/logo/logo-white.png" alt="">
+										<img src="assets/chick peck/chickpeck logo.png" class="footerlogo" alt="">
 									</div>
-									<p>Lorem ipsum dolor sit consectetur, ame adipiscing elit, sed do</p>
+									<p>At Chick Peck, we believe that great taste starts with great care.</p>
 									<ul class="address">
 										<li><span class="icofont-location-pin"></span>
-											<p class="address-info">4920 Trails End Road Ft United States, FL 33311</p>
+											<p class="address-info">PK Arcade, Karikkamkulam, Karaparamba</p>
 										</li>
 
-										<li><span class="icofont-email"></span>
+										<!-- <li><span class="icofont-email"></span>
 											<div class="address-inner">
 												<p class="address-info"><a href="mailto:nfo@example.com">nfo@example.com</a></p>
 												<p class="address-info"><a href="mailto:test@example.com">test@example.com</a></p>
 											</div>
-										</li>
+										</li> -->
 
 										<li><span class="icofont-ui-call"> </span>
 											<div class="address-inner">
-												<p class="address-info"><a href="tel:+123456679123">+123 456 679 123</a>
-												</p>
-												<p class="address-info"><a href="tel:+123456789">+123 456 789</a></p>
+												<p class="address-info"><a href="tel:+918921216529">8921216529</a></p>
+												<p class="address-info"><a href="tel:+918921238970">8921238970</a></p>
 											</div>
 										</li>
 									</ul>
@@ -535,8 +534,7 @@
 									</div>
 
 									<p class="subscribe-des">
-										Lorem ipsum dolor si consectetur adipisicing elit, sed eiusmotempor incididunt
-										ut labore et
+										Subscribe to the Chick Peck newsletter and be the first to know about our latest promotions, new menu items, and exclusive offers!
 									</p>
 
 									<form class="hero-form" action="#">
@@ -573,7 +571,7 @@
 						<div class="container">
 							<div class="row">
 								<div class="text-center">
-									<p class="copyright-text">© Copyright Cafeu. 2022 All Right Reserved</p>
+									<p class="copyright-text">© Copyright Chick Peck. 2024 All Right Reserved</p>
 								</div>
 							</div>
 						</div>
