--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
 							<div class="col-lg-3 col-md-6 col-sm-6 my-2 smpadright40" data-aos="fade-up" data-aos-duration="1000">
 								<div class="footer-content-wrapper">
 									<div class="footer-logo mb-4">
-										<img src="assets/img/logo/logo-white.png" alt="">
+										<img src="assets/chick peck/chickpeck logo.png" class="footerlogo" alt="">
 									</div>
 									<p>At Chick Peck, we believe that great taste starts with great care.</p>
 									<ul class="address">
