--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
 	<meta name="author" content="Codebasket">
 	<meta name="keywords"
 		content="Cafeu, food, restaurant, html, template, bootstrap, business, clean, creative, designer, responsive, minimal">
-	<meta name="type" content="Restaurant Template">
-	<meta name="title" content="Cafeu - Food Restaurant Bootstrap HTML Template">
-	<meta name="description" content="Discover the irresistible taste of Chick Peck fried chicken! Made with 100% Swiss quality, organic ingredients, and a commitment to excellence. Enjoy our delicious meals with fast online delivery and a buffet service that satisfies every craving. Taste the difference today!" />
-  <title>Chick Peck | Best Fried Chicken with 100% Swiss Quality & Organic Ingredients</title>
+		<meta name="type" content="Chick Peck | Best Fried Chicken with 100% Swiss Quality & Organic Ingredients">
+		<meta name="title" content=" Chick Peck | Best Fried Chicken with 100% Swiss Quality & Organic Ingredients">
+		<meta name="description" content="Discover the irresistible taste of Chick Peck fried chicken! Made with 100% Swiss quality, organic ingredients, and a commitment to excellence. Enjoy our delicious meals with fast online delivery and a buffet service that satisfies every craving. Taste the difference today!" />
+		<title>Chick Peck | Best Fried Chicken with 100% Swiss Quality & Organic Ingredients</title>
 	<!-- ==============favicon=============== -->
 	<link rel="shortcut icon" type="image/png" href="assets/img/log.png" />
 
