--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Codebasket">
 	<meta name="keywords"
-		content="Cafeu, food, restaurant, html, template, bootstrap, business, clean, creative, designer, responsive, minimal">
-	<meta name="type" content="Restaura	nt Template">
-	<meta name="title" content=" Cafeu- Food Restaurant Bootstrap HTML 5 Template">
+		content="Cafeu, food, restaurant,  business, clean, creative, designer, responsive, minimal">
+	<meta name="type" content="Chick Peck | Best Fried Chicken with 100% Swiss Quality & Organic Ingredients">
+	<meta name="title" content=" Chick Peck | Best Fried Chicken with 100% Swiss Quality & Organic Ingredients">
   <meta name="description" content="Discover the irresistible taste of Chick Peck fried chicken! Made with 100% Swiss quality, organic ingredients, and a commitment to excellence. Enjoy our delicious meals with fast online delivery and a buffet service that satisfies every craving. Taste the difference today!" />
   <title>Chick Peck | Best Fried Chicken with 100% Swiss Quality & Organic Ingredients</title>
 
