--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-6 mb-4" data-aos="fade-right" data-aos-duration="1000">
 								<div class="about-img">
-									<img src="assets/img/image/exparience.png" alt="">
+									<img src="assets/chick peck/about.png" alt="">
 								</div>
 							</div>
 
@@ -315,102 +315,10 @@
 			<!-- ======check section end======== -->
 
 
-			<!-- ==================Customers========== -->
-			<section>
-				<!-- customer  -->
-				<div class="customer customer-1 cpy-8">
-					<!-- container  -->
-					<div class="container">
-						<!-- section head  -->
-						<div class="section-head text-center " data-aos="fade-up" data-aos-duration="1000">
-							<span class="sm-title">Happy Customers</span>
-							<h2 class="sec-title">Our Guestbook</h2>
-						</div>
-						<!-- section head end  -->
-						<div class="d-flex justify-content-center">
-							<div class="col-12 col-sm-12 col-md-10" data-aos="fade-up" data-aos-duration="1500">
-								<div class="swiper customer-review">
-									<div class="swiper-wrapper">
-										<div class="swiper-slide review-item">
-											<div class="row">
-												<div class="col-md-7 my-2">
-													<div class="review">
-														<img src="assets/img/icon/7.png" alt="" class="quotation">
-														<h2 class="review-title mb-0">James Smith list <br> Specifications 2022</h2>
-														<p>Organizations throughout the World to manage heir IT <br> with our unique approach to
-															technology agement and <br> consultancy solutions. Provide users with priate view <br> and
-															access permissions
-														</p>
 
-														<h3 class="customer-name mb-0">Reson Roy <span>- Tool Customar</span>
-														</h3>
-													</div>
-												</div>
-												<div class="col-md-5 my-2">
-													<div class="customer-img">
-														<img src="assets/img/customer/1.png" alt="Image Not found">
-													</div>
-												</div>
-											</div>
-										</div>
-
-										<div class="swiper-slide review-item">
-											<div class="row">
-												<div class="col-md-7 my-2">
-													<div class="review">
-														<img src="assets/img/icon/7.png" alt="" class="quotation">
-														<h2 class="review-title mb-0">James Smith list <br> Specifications 2022</h2>
-														<p>Organizations throughout the World to manage heir IT <br> with our unique approach to
-															technology agement and <br> consultancy solutions. Provide users with priate view <br> and
-															access permissions
-														</p>
-
-														<h3 class="customer-name mb-0">Reson Roy <span>- Tool Customar</span>
-														</h3>
-													</div>
-												</div>
-												<div class="col-md-5 my-2">
-													<div class="customer-img">
-														<img src="assets/img/customer/11.png" alt="Image Not found">
-													</div>
-												</div>
-											</div>
-										</div>
-
-										<div class="swiper-slide review-item">
-											<div class="row">
-												<div class="col-md-7 my-2">
-													<div class="review">
-														<img src="assets/img/icon/7.png" alt="" class="quotation">
-														<h2 class="review-title mb-0">James Smith list <br> Specifications 2022</h2>
-														<p>Organizations throughout the World to manage heir IT <br> with our unique approach to
-															technology agement and <br> consultancy solutions. Provide users with priate view <br> and
-															access permissions
-														</p>
-
-														<h3 class="customer-name mb-0">Reson Roy <span>- Tool Customar</span>
-														</h3>
-													</div>
-												</div>
-												<div class="col-md-5 my-2">
-													<div class="customer-img">
-														<img src="assets/img/customer/12.png" alt="Image Not found">
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="review-pagination"></div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- container end  -->
-				</div>
-				<!-- custome end  -->
-			</section>
 			<!-- ==================Customers end========== -->
 
+			<!-- ========================Footer ============= -->
 			<!-- ========================Footer ============= -->
 			<footer>
 				<!-- footer section  -->
@@ -471,27 +379,27 @@
 									</div>
 									<ul class="insta-feed">
 										<li class="foot-list">
-											<a href="https://www.instagram.com/" class="footer-link"><img src="assets/img/instagram/1.png"
+											<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster1.jpeg"
 													alt=""></a>
 										</li>
 										<li class="foot-list">
-											<a href="https://www.instagram.com/" class="footer-link"><img src="assets/img/instagram/2.png"
+											<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster2.jpeg"
 													alt=""></a>
 										</li>
 										<li class="foot-list">
-											<a href="https://www.instagram.com/" class="footer-link"><img src="assets/img/instagram/3.png"
+											<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster3.jpeg"
 													alt=""></a>
 										</li>
 										<li class="foot-list">
-											<a href="https://www.instagram.com/" class="footer-link"><img src="assets/img/instagram/4.png"
+											<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster4.jpeg"
 													alt=""></a>
 										</li>
 										<li class="foot-list">
-											<a href="https://www.instagram.com/" class="footer-link"><img src="assets/img/instagram/5.png"
+											<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster5.jpeg"
 													alt=""></a>
 										</li>
 										<li class="foot-list">
-											<a href="https://www.instagram.com/" class="footer-link"><img src="assets/img/instagram/6.png"
+											<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster6.jpeg"
 													alt=""></a>
 										</li>
 									</ul>
