--- a/contact.html
+++ b/contact.html
@@ -234,146 +234,146 @@
 				</div>
 			</div>
 			<!-- ========================contact================== -->
-			<!-- ========================Footer ============= -->
-			<footer>
-				<!-- footer section  -->
-				<div class="footer-section footer-1" data-background="assets/img/footer-bg.png">
-					<!-- container  -->
-					<div class="container">
-						<!-- row  -->
-						<div class="row">
-							<div class="col-lg-3 col-md-6 col-sm-6 my-2 smpadright40" data-aos="fade-up" data-aos-duration="1000">
-								<div class="footer-content-wrapper">
-									<div class="footer-logo mb-4">
-										<img src="assets/chick peck/chickpeck logo.png" class="footerlogo" alt="">
-									</div>
-									<p>At Chick Peck, we believe that great taste starts with great care.</p>
-									<ul class="address">
-										<li><span class="icofont-location-pin"></span>
-											<p class="address-info">PK Arcade, Karikkamkulam, Karaparamba</p>
-										</li>
-
-										<!-- <li><span class="icofont-email"></span>
-											<div class="address-inner">
-												<p class="address-info"><a href="mailto:nfo@example.com">nfo@example.com</a></p>
-												<p class="address-info"><a href="mailto:test@example.com">test@example.com</a></p>
-											</div>
-										</li> -->
-
-										<li><span class="icofont-ui-call"> </span>
-											<div class="address-inner">
-												<p class="address-info"><a href="tel:+918921216529">8921216529</a></p>
-												<p class="address-info"><a href="tel:+918921238970">8921238970</a></p>
-											</div>
-										</li>
-									</ul>
-								</div>
-							</div>
-
-							<div class="col-lg-3 col-md-6 col-sm-6 my-2 padleft40" data-aos="fade-up" data-aos-duration="1500">
-								<div class="footer-content-wrapper">
-									<div class="footer-sec-head mb-4">
-										<h4 class="footer-widget-title">Quick links</h4>
-									</div>
-									<ul class="qu-link">
-										<li class="foot-list"><a href="menu.html" class="footer-link">Pizza</a></li>
-										<li class="foot-list"><a href="menu.html" class="footer-link">Burger</a></li>
-										<li class="foot-list"><a href="menu.html" class="footer-link">Cake</a></li>
-										<li class="foot-list"><a href="menu.html" class="footer-link">Chocolate</a></li>
-										<li class="foot-list"><a href="menu.html" class="footer-link">Ice Cream</a></li>
-										<li class="foot-list"><a href="menu.html" class="footer-link">Pizza</a></li>
-										<li class="foot-list"><a href="menu.html" class="footer-link">Burger</a></li>
-									</ul>
-								</div>
-							</div>
-
-							<div class="col-lg-3 col-md-6 col-sm-6 my-2 padright40" data-aos="fade-up" data-aos-duration="2000">
-								<div class="footer-content-wrapper">
-									<div class="footer-sec-head mb-4">
-										<h4 class="footer-widget-title">Instagram</h4>
-									</div>
-									<ul class="insta-feed">
-										<li class="foot-list">
-											<a href="https://www.instagram.com/" class="footer-link"><img src="assets/img/instagram/1.png"
-													alt=""></a>
-										</li>
-										<li class="foot-list">
-											<a href="https://www.instagram.com/" class="footer-link"><img src="assets/img/instagram/2.png"
-													alt=""></a>
-										</li>
-										<li class="foot-list">
-											<a href="https://www.instagram.com/" class="footer-link"><img src="assets/img/instagram/3.png"
-													alt=""></a>
-										</li>
-										<li class="foot-list">
-											<a href="https://www.instagram.com/" class="footer-link"><img src="assets/img/instagram/4.png"
-													alt=""></a>
-										</li>
-										<li class="foot-list">
-											<a href="https://www.instagram.com/" class="footer-link"><img src="assets/img/instagram/5.png"
-													alt=""></a>
-										</li>
-										<li class="foot-list">
-											<a href="https://www.instagram.com/" class="footer-link"><img src="assets/img/instagram/6.png"
-													alt=""></a>
-										</li>
-									</ul>
-								</div>
-							</div>
-
-							<div class="col-lg-3 col-md-6 col-sm-6 my-2" data-aos="fade-up" data-aos-duration="2500">
-								<div class="footer-content-wrapper">
-									<div class="footer-sec-head mb-4">
-										<h4 class="footer-widget-title">Subscribe</h4>
-									</div>
-
-									<p class="subscribe-des">
-										Subscribe to the Chick Peck newsletter and be the first to know about our latest promotions, new menu items, and exclusive offers!
-									</p>
-
-									<form class="hero-form" action="#">
-										<div class="input-group mb-3">
-											<input type="text" class="form-control subscribtion-input" placeholder="Enter Your Email">
-											<button type="submit" class="custom-btn"><span class="icofont-location-arrow"></span></button>
-										</div>
-									</form>
-									<ul class="social-ul">
-										<li class="social-list">
-											<a href="#" class="social-link"><span class="icofont-facebook"></span></a>
-										</li>
-
-										<li class="social-list">
-											<a href="#" class="social-link"><span class="icofont-twitter"></span></a>
-										</li>
-
-										<li class="social-list">
-											<a href="#" class="social-link"><span class="icofont-skype"></span></a>
-										</li>
-
-										<li class="social-list">
-											<a href="#" class="social-link"><span class="icofont-instagram"></span></a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<!-- row end  -->
-					</div>
-					<!-- container end  -->
-					<!-- last footer  -->
-					<div class="last-footer">
+				<!-- ========================Footer ============= -->
+				<footer>
+					<!-- footer section  -->
+					<div class="footer-section footer-1" data-background="assets/img/footer-bg.png">
+						<!-- container  -->
 						<div class="container">
+							<!-- row  -->
 							<div class="row">
-								<div class="text-center">
-									<p class="copyright-text">© Copyright Chick Peck. 2024 All Right Reserved</p>
+								<div class="col-lg-3 col-md-6 col-sm-6 my-2 smpadright40" data-aos="fade-up" data-aos-duration="1000">
+									<div class="footer-content-wrapper">
+										<div class="footer-logo mb-4">
+											<img src="assets/chick peck/chickpeck logo.png" class="footerlogo" alt="">
+										</div>
+										<p>At Chick Peck, we believe that great taste starts with great care.</p>
+										<ul class="address">
+											<li><span class="icofont-location-pin"></span>
+												<p class="address-info">PK Arcade, Karikkamkulam, Karaparamba</p>
+											</li>
+	
+											<!-- <li><span class="icofont-email"></span>
+												<div class="address-inner">
+													<p class="address-info"><a href="mailto:nfo@example.com">nfo@example.com</a></p>
+													<p class="address-info"><a href="mailto:test@example.com">test@example.com</a></p>
+												</div>
+											</li> -->
+	
+											<li><span class="icofont-ui-call"> </span>
+												<div class="address-inner">
+													<p class="address-info"><a href="tel:+918921216529">8921216529</a></p>
+													<p class="address-info"><a href="tel:+918921238970">8921238970</a></p>
+												</div>
+											</li>
+										</ul>
+									</div>
+								</div>
+	
+								<div class="col-lg-3 col-md-6 col-sm-6 my-2 padleft40" data-aos="fade-up" data-aos-duration="1500">
+									<div class="footer-content-wrapper">
+										<div class="footer-sec-head mb-4">
+											<h4 class="footer-widget-title">Quick links</h4>
+										</div>
+										<ul class="qu-link">
+											<li class="foot-list"><a href="menu.html" class="footer-link">Pizza</a></li>
+											<li class="foot-list"><a href="menu.html" class="footer-link">Burger</a></li>
+											<li class="foot-list"><a href="menu.html" class="footer-link">Cake</a></li>
+											<li class="foot-list"><a href="menu.html" class="footer-link">Chocolate</a></li>
+											<li class="foot-list"><a href="menu.html" class="footer-link">Ice Cream</a></li>
+											<li class="foot-list"><a href="menu.html" class="footer-link">Pizza</a></li>
+											<li class="foot-list"><a href="menu.html" class="footer-link">Burger</a></li>
+										</ul>
+									</div>
+								</div>
+	
+								<div class="col-lg-3 col-md-6 col-sm-6 my-2 padright40" data-aos="fade-up" data-aos-duration="2000">
+									<div class="footer-content-wrapper">
+										<div class="footer-sec-head mb-4">
+											<h4 class="footer-widget-title">Instagram</h4>
+										</div>
+										<ul class="insta-feed">
+											<li class="foot-list">
+												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster1.jpeg"
+														alt=""></a>
+											</li>
+											<li class="foot-list">
+												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster2.jpeg"
+														alt=""></a>
+											</li>
+											<li class="foot-list">
+												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster3.jpeg"
+														alt=""></a>
+											</li>
+											<li class="foot-list">
+												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster4.jpeg"
+														alt=""></a>
+											</li>
+											<li class="foot-list">
+												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster5.jpeg"
+														alt=""></a>
+											</li>
+											<li class="foot-list">
+												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster6.jpeg"
+														alt=""></a>
+											</li>
+										</ul>
+									</div>
+								</div>
+	
+								<div class="col-lg-3 col-md-6 col-sm-6 my-2" data-aos="fade-up" data-aos-duration="2500">
+									<div class="footer-content-wrapper">
+										<div class="footer-sec-head mb-4">
+											<h4 class="footer-widget-title">Subscribe</h4>
+										</div>
+	
+										<p class="subscribe-des">
+											Subscribe to the Chick Peck newsletter and be the first to know about our latest promotions, new menu items, and exclusive offers!
+										</p>
+	
+										<form class="hero-form" action="#">
+											<div class="input-group mb-3">
+												<input type="text" class="form-control subscribtion-input" placeholder="Enter Your Email">
+												<button type="submit" class="custom-btn"><span class="icofont-location-arrow"></span></button>
+											</div>
+										</form>
+										<ul class="social-ul">
+											<li class="social-list">
+												<a href="#" class="social-link"><span class="icofont-facebook"></span></a>
+											</li>
+	
+											<li class="social-list">
+												<a href="#" class="social-link"><span class="icofont-twitter"></span></a>
+											</li>
+	
+											<li class="social-list">
+												<a href="#" class="social-link"><span class="icofont-skype"></span></a>
+											</li>
+	
+											<li class="social-list">
+												<a href="#" class="social-link"><span class="icofont-instagram"></span></a>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<!-- row end  -->
+						</div>
+						<!-- container end  -->
+						<!-- last footer  -->
+						<div class="last-footer">
+							<div class="container">
+								<div class="row">
+									<div class="text-center">
+										<p class="copyright-text">© Copyright Chick Peck. 2024 All Right Reserved</p>
+									</div>
 								</div>
 							</div>
 						</div>
+						<!-- last footer end  -->
 					</div>
-					<!-- last footer end  -->
-				</div>
-				<!-- footer section end  -->
-			</footer>
+					<!-- footer section end  -->
+				</footer>
 			<!-- ========================Footer end============= -->
 		</div>
 		<!-- =======================body wrapper end========= -->
