--- a/contact.html
+++ b/contact.html
@@ -276,13 +276,13 @@
 											<h4 class="footer-widget-title">Quick links</h4>
 										</div>
 										<ul class="qu-link">
-											<li class="foot-list"><a href="menu.html" class="footer-link">Pizza</a></li>
 											<li class="foot-list"><a href="menu.html" class="footer-link">Burger</a></li>
-											<li class="foot-list"><a href="menu.html" class="footer-link">Cake</a></li>
-											<li class="foot-list"><a href="menu.html" class="footer-link">Chocolate</a></li>
+											<li class="foot-list"><a href="menu.html" class="footer-link">Nuggets</a></li>
+											<li class="foot-list"><a href="menu.html" class="footer-link">Sandwich</a></li>
+											<li class="foot-list"><a href="menu.html" class="footer-link">Strips</a></li>
 											<li class="foot-list"><a href="menu.html" class="footer-link">Ice Cream</a></li>
-											<li class="foot-list"><a href="menu.html" class="footer-link">Pizza</a></li>
-											<li class="foot-list"><a href="menu.html" class="footer-link">Burger</a></li>
+											<li class="foot-list"><a href="menu.html" class="footer-link">Mojito</a></li>
+											<li class="foot-list"><a href="menu.html" class="footer-link">Fresh Juice</a></li>
 										</ul>
 									</div>
 								</div>
@@ -294,28 +294,28 @@
 										</div>
 										<ul class="insta-feed">
 											<li class="foot-list">
-												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster1.jpeg"
-														alt=""></a>
+												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img
+														src="assets/chick peck/poster1.jpeg" alt=""></a>
 											</li>
 											<li class="foot-list">
-												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster2.jpeg"
-														alt=""></a>
+												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img
+														src="assets/chick peck/poster2.jpeg" alt=""></a>
 											</li>
 											<li class="foot-list">
-												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster3.jpeg"
-														alt=""></a>
+												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img
+														src="assets/chick peck/poster3.jpeg" alt=""></a>
 											</li>
 											<li class="foot-list">
-												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster4.jpeg"
-														alt=""></a>
+												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img
+														src="assets/chick peck/poster4.jpeg" alt=""></a>
 											</li>
 											<li class="foot-list">
-												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster5.jpeg"
-														alt=""></a>
+												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img
+														src="assets/chick peck/poster5.jpeg" alt=""></a>
 											</li>
 											<li class="foot-list">
-												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img src="assets/chick peck/poster6.jpeg"
-														alt=""></a>
+												<a href="https://www.instagram.com/chick.peck_friedchicken/" class="footer-link"><img
+														src="assets/chick peck/poster6.jpeg" alt=""></a>
 											</li>
 										</ul>
 									</div>
@@ -328,7 +328,8 @@
 										</div>
 	
 										<p class="subscribe-des">
-											Subscribe to the Chick Peck newsletter and be the first to know about our latest promotions, new menu items, and exclusive offers!
+											Subscribe to the Chick Peck newsletter and be the first to know about our latest promotions, new
+											menu items, and exclusive offers!
 										</p>
 	
 										<form class="hero-form" action="#">
