--- a/index.html
+++ b/index.html
@@ -485,11 +485,11 @@
 												<ul class="note-ul">
 													<li class="note-li">
 														<p class="day">Sunday to Tuesday</p>
-														<p class="time">09:00 - 06:00</p>
+														<p class="time">11:00 AM - 12:00 MIDNIGHT</p> 
 													</li>
 													<li class="note-li">
 														<p class="day">Friday to Sunday</p>
-														<p class="time">06:00 - 09:00</p>
+														<p class="time">11:00 AM - 12:00 MIDNIGHT</p>
 													</li>
 													<li class="note-li">
 														<p class="day">Sunday to Tuesday</p>
@@ -497,11 +497,11 @@
 													</li>
 													<li class="note-li">
 														<p class="day">Monday to Friday</p>
-														<p class="time">06:00 - 09:00</p>
+														<p class="time">11:00 AM - 12:00 MIDNIGHT</p>
 													</li>
 													<li class="note-li">
 														<p class="day">Monday to Saturday</p>
-														<p class="time">06:00 - 09:00</p>
+														<p class="time">11:00 AM - 12:00 MIDNIGHT</p>
 													</li>
 												</ul>
 
